--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <textarea name="strength1" type="text" name="narrative" cols="40" rows="5" style="width: 350px"></textarea>
           <select name="sdiet1" style="width: 100px">
             <option value="sdiet1a">carnivore</option>
-            <option value="sdiet1ab">omnivore</option>
+            <option value="sdiet1b">omnivore</option>
             <option value="sdiet1c">herbivore</option>
           </select>
 
